--- a/src/components/ProductList.module.css
+++ b/src/components/ProductList.module.css
@@ -2,14 +2,14 @@
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 0 20px;
 }
 
 .stickyWrapper {
   position: sticky;
   top: 168px; /* Altura del header */
-  background-color: #fff;
-  z-index: 99;
+  background-color: #f4f4f4;
+  z-index: 999;
   padding: 1rem 0;
   margin-bottom: 1rem;
   display: flex;
@@ -34,6 +34,7 @@
 
 @media (max-width: 900px) {
     .stickyWrapper {
+        top: 72px; /* Altura del header en móvil */
         padding-left: 20px;
         padding-right: 20px;
     }
