--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     background-color: #f4f4f4;
     color: #333;
+    overflow-x: hidden;
 }
 
 main {
